--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "herokuApp",
+  "name": "heroku-app-guided-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
